--- a/css/style-fix.css
+++ b/css/style-fix.css
@@ -76,7 +76,7 @@ img {
 #live2d-widget {
     position: fixed;
     right: 0;
-    bottom: 0;
+    bottom: 50px;
     z-index: 999;
 }
 
@@ -89,7 +89,7 @@ img {
 .waifu {
     position: fixed;
     right: 0;
-    bottom: 0;
+    bottom: 50px;
     z-index: 999;
     transition: all .3s ease-in-out;
     transform-origin: right bottom;
@@ -117,6 +117,8 @@ img {
     height: 400px;
     position: relative;
     z-index: 998;
+    transform: scale(1.1);
+    transform-origin: bottom right;
 }
 
 /* 雪花动画 */
